# nerfstudio

./: 2020-06-25-00-34-us-ca-mtv-sb-10_last.esp  README.md  log.txt  red_rocks_height_net.pth
ges_trajs/: berlin1_theater.esp  memorial_church_1.esp
heightmap_nerf/: pyproject.toml
heightmap_nerf/heightmap_nerfacto/: datamanager.py  field.py  model.py  pipeline.py
heightmap_nerf/heightmap_nerfacto/utils/: geodetic_utils.py
minimal_regional_nerf/: pyproject.toml
minimal_regional_nerf/minimal_regional_nerfacto/: config.py  datamanager.py  field.py  model.py  pipeline.py
minimal_regional_nerf/minimal_regional_nerfacto/utils/: geodetic_utils.py
nerfstudio/configs/: method_configs.py
nerfstudio/data/datamanagers/: parallel_datamanager.py
nerfstudio/data/dataparsers/: nerfstudio_dataparser.py
nerfstudio/scripts/: render.py
nerfstudio/utils/: colormaps.py
nerfstudio/viewer/: control_panel.py  viewer_elements.py
notebooks/: align_camera_plane.ipynb  compute_dino_features.ipynb  transforms.ipynb
regional_nerf/regional_nerfacto/: config.py  datamanager.py  field.py  model.py
scripts/: generate_ges_traj.py  ges2transforms.py  global_camera_path.json  nerf_features.py  organize_img_data.py  polar_traverse_generate_ns_data.py  process_transforms.py  render_poses.py  render_shadows.py  save_nemo_weights.py  save_nerf_model.py  train_nerfstudio.py  visualize_fields.py
shadow_regional_nerf/: pyproject.toml
shadow_regional_nerf/shadow_regional_nerfacto/: config.py  datamanager.py  field.py  model.py  pipeline.py
shadow_regional_nerf/shadow_regional_nerfacto/cameras/: satellite_shadow_camera.py
terrain_nerf/: pyproject.toml
terrain_nerf/terrain_nerfacto/: config.py  datamanager.py  field.py  model.py  nemo.py  pipeline.py
terrain_nerf/terrain_nerfacto/utils/: dino_dataloader.py  siren.py
