[project]
name = "minimal-regional-nerf-methods"
description = "NeRF models customized for regional map data, but minimal deviation from nerfacto"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["minimal_regional_nerfacto*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
minimal-regional-nerfacto = 'minimal_regional_nerfacto.config:minimal_regional_nerfacto'