[project]
name = "terrain-nerf-methods"
description = "NeRF models customized for terrain map data"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["terrain_nerfacto*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
terrain-nerfacto = 'terrain_nerfacto.config:terrain_nerfacto'